2005-11-01 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/app.cc, sim/ucsim/cmd.src/cmdutil.cc, sim/ucsim/cmd.src/newcmd.cc:
	  enabled sockets on WIN32
	* sim/ucsim/cmd.src/newcmd.cc: fixed bug with uninitialized varaibles

2005-10-31 Borut Razem <borut.razem AT siol.net>

	* support/regression/generate-cases.py: escape backslashes in {testcase}:
	  WIN32 backslash path delimiters should be escaped when used in C strings
	* support/regression/tests/bitfields.c: exclude failing assertions for
	  __CYGWIN32__ and __MINGW32__ hosts

2005-10-30 Borut Razem <borut.razem AT siol.net>

	* src/SDCCutil.c: corrected double comparison typo

2005-10-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/medium/Makefile: added for new memory model medium
	* device/include/asm/mcs51/features.h: updated for medium/pdata
	* device/include/mcs51/c8051f120.h: added sfr16/sfr32 definitions,
	  added Multiply & Accumulate sbit's and MAC0_PAGE define
	* device/include/mcs51/c8051f300.h: added sfr16 definitions
	* device/include/mcs51/c8051f310.h: added sfr16 definitions
	* device/lib/_mullong.c: update for medium model
	* device/lib/incl.mk: added medium model
	* doc/sdccman.lyx: documented medium model
	* src/SDCCast.c (isBitAndPow2): simplified using updated powof2
	* src/SDCCicode.c (geniCodeMultiply, geniCodeDivision): use updated powof2
	* src/SDCCmain.c (optionsTable, linkEdit): enabled medium model
	* src/SDCCmem.c (allocIntoSeg): set iaccess for pdata symbols,
	  (allocParms): set SCLS and OCLS to pdata for medium model
	* src/SDCCsymt.c (processFuncArgs): use default_local_map and set iaccess
	  for pdata,
	  (powof2): return <0 if not power of 2
	* src/avr/gen.c (genBitWise): use updated powof2
	* src/mcs51/gen.c (genMinusDec): use acc if necessary,
	  (shiftR2Left2Result): small optimization in setup, save acc when storing,
	  (shiftLLeftOrResult): use B if necessary
	* src/mcs51/main.c (_mcs51_finaliseOptions, mcs51_port): added medium model